--- a/content0.html
+++ b/content0.html
@@ -1,3 +1,53 @@
+<a id="Sailing"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Sailing on the Bay</h3>
+  </li>
+  <li class="date">
+    November 2014
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/sailing/IMG_2727.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sailing)">
+      <img width="180" height="120" src="thumbs/sailing/IMG_2727.jpg" alt="IMG_2727.jpg" />
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/sailing/IMG_2738.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sailing)">
+      <img width="180" height="120" src="thumbs/sailing/IMG_2738.jpg" alt="IMG_2738.jpg" />
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/sailing/IMG_2743.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sailing)">
+      <img width="180" height="120" src="thumbs/sailing/IMG_2743.jpg" alt="IMG_2743.jpg" />
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/sailing/IMG_2753.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sailing)">
+      <img width="180" height="120" src="thumbs/sailing/IMG_2753.jpg" alt="IMG_2753.jpg" />
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/sailing/IMG_2761.jpg"
+      title=""
+      onclick="return hs.expand(this, config_sailing)">
+      <img width="180" height="120" src="thumbs/sailing/IMG_2761.jpg" alt="IMG_2761.jpg" />
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="poemealoup"></a>
 <ul class="titlebar">
   <li class="title">
@@ -15,42 +65,60 @@
     <a class="highslide" href="hq/poemealoup/IMG_2063.jpg"
       title=""
       onclick="return hs.expand(this, config_poemealoup)">
-      <img width="160" height="120" src="thumbs/poemealoup/IMG_2063.jpg" alt="IMG_2063.jpg" />
+      <img class="lazy galleries/poemealoup" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/poemealoup/IMG_2063.jpg" alt="IMG_2063.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/poemealoup/IMG_2063.jpg" alt="IMG_2063.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot2">
     <a class="highslide" href="hq/poemealoup/IMG_2065.jpg"
       title=""
       onclick="return hs.expand(this, config_poemealoup)">
-      <img width="90" height="120" src="thumbs/poemealoup/IMG_2065.jpg" alt="IMG_2065.jpg" />
+      <img class="lazy galleries/poemealoup" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/poemealoup/IMG_2065.jpg" alt="IMG_2065.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/poemealoup/IMG_2065.jpg" alt="IMG_2065.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot3">
     <a class="highslide" href="hq/poemealoup/IMG_2067.jpg"
       title=""
       onclick="return hs.expand(this, config_poemealoup)">
-      <img width="90" height="120" src="thumbs/poemealoup/IMG_2067.jpg" alt="IMG_2067.jpg" />
+      <img class="lazy galleries/poemealoup" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/poemealoup/IMG_2067.jpg" alt="IMG_2067.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/poemealoup/IMG_2067.jpg" alt="IMG_2067.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot4">
     <a class="highslide" href="hq/poemealoup/IMG_2071.jpg"
       title=""
       onclick="return hs.expand(this, config_poemealoup)">
-      <img width="90" height="120" src="thumbs/poemealoup/IMG_2071.jpg" alt="IMG_2071.jpg" />
+      <img class="lazy galleries/poemealoup" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/poemealoup/IMG_2071.jpg" alt="IMG_2071.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/poemealoup/IMG_2071.jpg" alt="IMG_2071.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot5">
     <a class="highslide" href="hq/poemealoup/IMG_2077.jpg"
       title=""
       onclick="return hs.expand(this, config_poemealoup)">
-      <img width="160" height="120" src="thumbs/poemealoup/IMG_2077.jpg" alt="IMG_2077.jpg" />
+      <img class="lazy galleries/poemealoup" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/poemealoup/IMG_2077.jpg" alt="IMG_2077.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/poemealoup/IMG_2077.jpg" alt="IMG_2077.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot0">
     <a class="highslide" href="hq/poemealoup/IMG_2079.jpg"
       title=""
       onclick="return hs.expand(this, config_poemealoup)">
-      <img width="160" height="120" src="thumbs/poemealoup/IMG_2079.jpg" alt="IMG_2079.jpg" />
+      <img class="lazy galleries/poemealoup" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/poemealoup/IMG_2079.jpg" alt="IMG_2079.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/poemealoup/IMG_2079.jpg" alt="IMG_2079.jpg" />
+      </noscript>
     </a>
   </div>
   <div style="clear:both"></div>
@@ -315,101 +383,6 @@
       <img class="lazy galleries/ggsemi" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ggsemi/IMG_1984.jpg" alt="IMG_1984.jpg" />
       <noscript>
         <img width="90" height="120" src="thumbs/ggsemi/IMG_1984.jpg" alt="IMG_1984.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="emeraldsdonner"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Emeralds & Donner</h3>
-  </li>
-  <li class="date">
-    June 2014
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/emeraldsdonner/10.jpg"
-      title="Benji contemplating a dyno on an great 6b+. On that day, I sent my first 7b/+ which follows the arete."
-      onclick="return hs.expand(this, config_emeraldsdonner)">
-      <img class="lazy galleries/emeraldsdonner" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/10.jpg" alt="10.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/emeraldsdonner/10.jpg" alt="10.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/emeraldsdonner/20.jpg"
-      title="Working an old school 7b. So hard, so thin, impossible!"
-      onclick="return hs.expand(this, config_emeraldsdonner)">
-      <img class="lazy galleries/emeraldsdonner" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/20.jpg" alt="20.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/emeraldsdonner/20.jpg" alt="20.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/emeraldsdonner/25.jpg"
-      title="Davide on Step into the Light, the best line on the wall."
-      onclick="return hs.expand(this, config_emeraldsdonner)">
-      <img class="lazy galleries/emeraldsdonner" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/25.jpg" alt="25.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/emeraldsdonner/25.jpg" alt="25.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/emeraldsdonner/30.jpg"
-      title="Camping at D.L. Bliss never gets old. The water was 13C, much colder than last year."
-      onclick="return hs.expand(this, config_emeraldsdonner)">
-      <img class="lazy galleries/emeraldsdonner" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/30.jpg" alt="30.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/emeraldsdonner/30.jpg" alt="30.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/emeraldsdonner/40.jpg"
-      title="Potato juggling while our gigantic steaks are cooking."
-      onclick="return hs.expand(this, config_emeraldsdonner)">
-      <img class="lazy galleries/emeraldsdonner" width="112" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/40.jpg" alt="40.jpg" />
-      <noscript>
-        <img width="112" height="120" src="thumbs/emeraldsdonner/40.jpg" alt="40.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/emeraldsdonner/50.jpg"
-      title="A short but super technical 6c at Donner. Sequency and balancy until the very end. "
-      onclick="return hs.expand(this, config_emeraldsdonner)">
-      <img class="lazy galleries/emeraldsdonner" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/50.jpg" alt="50.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/emeraldsdonner/50.jpg" alt="50.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/emeraldsdonner/60.jpg"
-      title="A 5.8 'offwidth' that turned out to be very easy with lots of holds for hands and feet. Here, I am locking myself by inflating my chest!"
-      onclick="return hs.expand(this, config_emeraldsdonner)">
-      <img class="lazy galleries/emeraldsdonner" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/60.jpg" alt="60.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/emeraldsdonner/60.jpg" alt="60.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/emeraldsdonner/70.jpg"
-      title="The offwidth crack with a spicy 5c+ slab to the right."
-      onclick="return hs.expand(this, config_emeraldsdonner)">
-      <img class="lazy galleries/emeraldsdonner" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/70.jpg" alt="70.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/emeraldsdonner/70.jpg" alt="70.jpg" />
       </noscript>
     </a>
   </div>
