--- a/content1.html
+++ b/content1.html
@@ -1,3 +1,98 @@
+<a id="emeraldsdonner"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Emeralds & Donner</h3>
+  </li>
+  <li class="date">
+    June 2014
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/emeraldsdonner/10.jpg"
+      title="Benji contemplating a dyno on an great 6b+. On that day, I sent my first 7b/+ which follows the arete."
+      onclick="return hs.expand(this, config_emeraldsdonner)">
+      <img class="lazy galleries/emeraldsdonner" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/10.jpg" alt="10.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/emeraldsdonner/10.jpg" alt="10.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/emeraldsdonner/20.jpg"
+      title="Working an old school 7b. So hard, so thin, impossible!"
+      onclick="return hs.expand(this, config_emeraldsdonner)">
+      <img class="lazy galleries/emeraldsdonner" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/20.jpg" alt="20.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/emeraldsdonner/20.jpg" alt="20.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/emeraldsdonner/25.jpg"
+      title="Davide on Step into the Light, the best line on the wall."
+      onclick="return hs.expand(this, config_emeraldsdonner)">
+      <img class="lazy galleries/emeraldsdonner" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/25.jpg" alt="25.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/emeraldsdonner/25.jpg" alt="25.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/emeraldsdonner/30.jpg"
+      title="Camping at D.L. Bliss never gets old. The water was 13C, much colder than last year."
+      onclick="return hs.expand(this, config_emeraldsdonner)">
+      <img class="lazy galleries/emeraldsdonner" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/30.jpg" alt="30.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/emeraldsdonner/30.jpg" alt="30.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/emeraldsdonner/40.jpg"
+      title="Potato juggling while our gigantic steaks are cooking."
+      onclick="return hs.expand(this, config_emeraldsdonner)">
+      <img class="lazy galleries/emeraldsdonner" width="112" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/40.jpg" alt="40.jpg" />
+      <noscript>
+        <img width="112" height="120" src="thumbs/emeraldsdonner/40.jpg" alt="40.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/emeraldsdonner/50.jpg"
+      title="A short but super technical 6c at Donner. Sequency and balancy until the very end. "
+      onclick="return hs.expand(this, config_emeraldsdonner)">
+      <img class="lazy galleries/emeraldsdonner" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/50.jpg" alt="50.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/emeraldsdonner/50.jpg" alt="50.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/emeraldsdonner/60.jpg"
+      title="A 5.8 'offwidth' that turned out to be very easy with lots of holds for hands and feet. Here, I am locking myself by inflating my chest!"
+      onclick="return hs.expand(this, config_emeraldsdonner)">
+      <img class="lazy galleries/emeraldsdonner" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/60.jpg" alt="60.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/emeraldsdonner/60.jpg" alt="60.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/emeraldsdonner/70.jpg"
+      title="The offwidth crack with a spicy 5c+ slab to the right."
+      onclick="return hs.expand(this, config_emeraldsdonner)">
+      <img class="lazy galleries/emeraldsdonner" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/emeraldsdonner/70.jpg" alt="70.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/emeraldsdonner/70.jpg" alt="70.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="kokopelli"></a>
 <ul class="titlebar">
   <li class="title">
@@ -625,131 +720,6 @@
       <img class="lazy galleries/hpointe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1299.jpg" alt="IMG_1299.jpg" />
       <noscript>
         <img width="90" height="120" src="thumbs/hpointe/IMG_1299.jpg" alt="IMG_1299.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="Bostan"></a>
-<ul class="titlebar">
-  <li class="title">
-    <h3>Tête de Bostan</h3>
-  </li>
-  <li class="date">
-    December 2013
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/bostan/IMG_1182.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1182.jpg" alt="IMG_1182.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/bostan/IMG_1182.jpg" alt="IMG_1182.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/bostan/IMG_1188.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1188.jpg" alt="IMG_1188.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/bostan/IMG_1188.jpg" alt="IMG_1188.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/bostan/IMG_1190.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1190.jpg" alt="IMG_1190.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/bostan/IMG_1190.jpg" alt="IMG_1190.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/bostan/IMG_1192.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1192.jpg" alt="IMG_1192.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/bostan/IMG_1192.jpg" alt="IMG_1192.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/bostan/IMG_1202.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1202.jpg" alt="IMG_1202.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/bostan/IMG_1202.jpg" alt="IMG_1202.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/bostan/IMG_1206.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1206.jpg" alt="IMG_1206.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/bostan/IMG_1206.jpg" alt="IMG_1206.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/bostan/IMG_1209.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1209.jpg" alt="IMG_1209.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/bostan/IMG_1209.jpg" alt="IMG_1209.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/bostan/IMG_1212.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1212.jpg" alt="IMG_1212.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/bostan/IMG_1212.jpg" alt="IMG_1212.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/bostan/IMG_1213.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1213.jpg" alt="IMG_1213.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/bostan/IMG_1213.jpg" alt="IMG_1213.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/bostan/IMG_1215.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1215.jpg" alt="IMG_1215.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/bostan/IMG_1215.jpg" alt="IMG_1215.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/bostan/IMG_1221.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1221.jpg" alt="IMG_1221.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/bostan/IMG_1221.jpg" alt="IMG_1221.jpg" />
       </noscript>
     </a>
   </div>
