--- a/content2.html
+++ b/content2.html
@@ -1,3 +1,128 @@
+<a id="Bostan"></a>
+<ul class="titlebar">
+  <li class="title">
+    <h3>Tête de Bostan</h3>
+  </li>
+  <li class="date">
+    December 2013
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/bostan/IMG_1182.jpg"
+      title=""
+      onclick="return hs.expand(this, config_bostan)">
+      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1182.jpg" alt="IMG_1182.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/bostan/IMG_1182.jpg" alt="IMG_1182.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/bostan/IMG_1188.jpg"
+      title=""
+      onclick="return hs.expand(this, config_bostan)">
+      <img class="lazy galleries/bostan" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1188.jpg" alt="IMG_1188.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/bostan/IMG_1188.jpg" alt="IMG_1188.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/bostan/IMG_1190.jpg"
+      title=""
+      onclick="return hs.expand(this, config_bostan)">
+      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1190.jpg" alt="IMG_1190.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/bostan/IMG_1190.jpg" alt="IMG_1190.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/bostan/IMG_1192.jpg"
+      title=""
+      onclick="return hs.expand(this, config_bostan)">
+      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1192.jpg" alt="IMG_1192.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/bostan/IMG_1192.jpg" alt="IMG_1192.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/bostan/IMG_1202.jpg"
+      title=""
+      onclick="return hs.expand(this, config_bostan)">
+      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1202.jpg" alt="IMG_1202.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/bostan/IMG_1202.jpg" alt="IMG_1202.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/bostan/IMG_1206.jpg"
+      title=""
+      onclick="return hs.expand(this, config_bostan)">
+      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1206.jpg" alt="IMG_1206.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/bostan/IMG_1206.jpg" alt="IMG_1206.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/bostan/IMG_1209.jpg"
+      title=""
+      onclick="return hs.expand(this, config_bostan)">
+      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1209.jpg" alt="IMG_1209.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/bostan/IMG_1209.jpg" alt="IMG_1209.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/bostan/IMG_1212.jpg"
+      title=""
+      onclick="return hs.expand(this, config_bostan)">
+      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1212.jpg" alt="IMG_1212.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/bostan/IMG_1212.jpg" alt="IMG_1212.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/bostan/IMG_1213.jpg"
+      title=""
+      onclick="return hs.expand(this, config_bostan)">
+      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1213.jpg" alt="IMG_1213.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/bostan/IMG_1213.jpg" alt="IMG_1213.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/bostan/IMG_1215.jpg"
+      title=""
+      onclick="return hs.expand(this, config_bostan)">
+      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1215.jpg" alt="IMG_1215.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/bostan/IMG_1215.jpg" alt="IMG_1215.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/bostan/IMG_1221.jpg"
+      title=""
+      onclick="return hs.expand(this, config_bostan)">
+      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1221.jpg" alt="IMG_1221.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/bostan/IMG_1221.jpg" alt="IMG_1221.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="Marion2"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -493,61 +618,6 @@
       <img class="lazy galleries/marion" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion/IMG_0824.jpg" alt="IMG_0824.jpg" />
       <noscript>
         <img width="160" height="120" src="thumbs/marion/IMG_0824.jpg" alt="IMG_0824.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="AiguillesRouges"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Aiguilles Rouges</h3>
-  </li>
-  <li class="date">
-    August 2013
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/rouges/DSCN0846.jpg"
-      title=""
-      onclick="return hs.expand(this, config_rouges)">
-      <img class="lazy galleries/rouges" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/rouges/DSCN0846.jpg" alt="DSCN0846.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/rouges/DSCN0846.jpg" alt="DSCN0846.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/rouges/DSCN0852.jpg"
-      title=""
-      onclick="return hs.expand(this, config_rouges)">
-      <img class="lazy galleries/rouges" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/rouges/DSCN0852.jpg" alt="DSCN0852.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/rouges/DSCN0852.jpg" alt="DSCN0852.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/rouges/IMG_0755.jpg"
-      title=""
-      onclick="return hs.expand(this, config_rouges)">
-      <img class="lazy galleries/rouges" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/rouges/IMG_0755.jpg" alt="IMG_0755.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/rouges/IMG_0755.jpg" alt="IMG_0755.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/rouges/IMG_0764.jpg"
-      title=""
-      onclick="return hs.expand(this, config_rouges)">
-      <img class="lazy galleries/rouges" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/rouges/IMG_0764.jpg" alt="IMG_0764.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/rouges/IMG_0764.jpg" alt="IMG_0764.jpg" />
       </noscript>
     </a>
   </div>
