--- a/content3.html
+++ b/content3.html
@@ -1,3 +1,58 @@
+<a id="AiguillesRouges"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Aiguilles Rouges</h3>
+  </li>
+  <li class="date">
+    August 2013
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/rouges/DSCN0846.jpg"
+      title=""
+      onclick="return hs.expand(this, config_rouges)">
+      <img class="lazy galleries/rouges" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/rouges/DSCN0846.jpg" alt="DSCN0846.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/rouges/DSCN0846.jpg" alt="DSCN0846.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/rouges/DSCN0852.jpg"
+      title=""
+      onclick="return hs.expand(this, config_rouges)">
+      <img class="lazy galleries/rouges" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/rouges/DSCN0852.jpg" alt="DSCN0852.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/rouges/DSCN0852.jpg" alt="DSCN0852.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/rouges/IMG_0755.jpg"
+      title=""
+      onclick="return hs.expand(this, config_rouges)">
+      <img class="lazy galleries/rouges" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/rouges/IMG_0755.jpg" alt="IMG_0755.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/rouges/IMG_0755.jpg" alt="IMG_0755.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/rouges/IMG_0764.jpg"
+      title=""
+      onclick="return hs.expand(this, config_rouges)">
+      <img class="lazy galleries/rouges" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/rouges/IMG_0764.jpg" alt="IMG_0764.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/rouges/IMG_0764.jpg" alt="IMG_0764.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="Fairview"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -554,91 +609,6 @@
       <img class="lazy galleries/eastbuttress" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/eastbuttress/98.jpg" alt="98.jpg" />
       <noscript>
         <img width="160" height="120" src="thumbs/eastbuttress/98.jpg" alt="98.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="Pinnacles2"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Pinnacles</h3>
-  </li>
-  <li class="date">
-    April 2013
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/pinnacles2/10.jpg"
-      title=""
-      onclick="return hs.expand(this, config_pinnacles2)">
-      <img class="lazy galleries/pinnacles2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/10.jpg" alt="10.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/pinnacles2/10.jpg" alt="10.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/pinnacles2/12.jpg"
-      title=""
-      onclick="return hs.expand(this, config_pinnacles2)">
-      <img class="lazy galleries/pinnacles2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/12.jpg" alt="12.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/pinnacles2/12.jpg" alt="12.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/pinnacles2/14.jpg"
-      title=""
-      onclick="return hs.expand(this, config_pinnacles2)">
-      <img class="lazy galleries/pinnacles2" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/14.jpg" alt="14.jpg" />
-      <noscript>
-        <img width="180" height="120" src="thumbs/pinnacles2/14.jpg" alt="14.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/pinnacles2/20.jpg"
-      title=""
-      onclick="return hs.expand(this, config_pinnacles2)">
-      <img class="lazy galleries/pinnacles2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/20.jpg" alt="20.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/pinnacles2/20.jpg" alt="20.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/pinnacles2/80.jpg"
-      title=""
-      onclick="return hs.expand(this, config_pinnacles2)">
-      <img class="lazy galleries/pinnacles2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/80.jpg" alt="80.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/pinnacles2/80.jpg" alt="80.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/pinnacles2/95.jpg"
-      title=""
-      onclick="return hs.expand(this, config_pinnacles2)">
-      <img class="lazy galleries/pinnacles2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/95.jpg" alt="95.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/pinnacles2/95.jpg" alt="95.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/pinnacles2/99.jpg"
-      title=""
-      onclick="return hs.expand(this, config_pinnacles2)">
-      <img class="lazy galleries/pinnacles2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/99.jpg" alt="99.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/pinnacles2/99.jpg" alt="99.jpg" />
       </noscript>
     </a>
   </div>
