--- a/content4.html
+++ b/content4.html
@@ -1,3 +1,88 @@
+<a id="Pinnacles2"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Pinnacles</h3>
+  </li>
+  <li class="date">
+    April 2013
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/pinnacles2/10.jpg"
+      title=""
+      onclick="return hs.expand(this, config_pinnacles2)">
+      <img class="lazy galleries/pinnacles2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/10.jpg" alt="10.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/pinnacles2/10.jpg" alt="10.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/pinnacles2/12.jpg"
+      title=""
+      onclick="return hs.expand(this, config_pinnacles2)">
+      <img class="lazy galleries/pinnacles2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/12.jpg" alt="12.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/pinnacles2/12.jpg" alt="12.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/pinnacles2/14.jpg"
+      title=""
+      onclick="return hs.expand(this, config_pinnacles2)">
+      <img class="lazy galleries/pinnacles2" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/14.jpg" alt="14.jpg" />
+      <noscript>
+        <img width="180" height="120" src="thumbs/pinnacles2/14.jpg" alt="14.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/pinnacles2/20.jpg"
+      title=""
+      onclick="return hs.expand(this, config_pinnacles2)">
+      <img class="lazy galleries/pinnacles2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/20.jpg" alt="20.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/pinnacles2/20.jpg" alt="20.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/pinnacles2/80.jpg"
+      title=""
+      onclick="return hs.expand(this, config_pinnacles2)">
+      <img class="lazy galleries/pinnacles2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/80.jpg" alt="80.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/pinnacles2/80.jpg" alt="80.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/pinnacles2/95.jpg"
+      title=""
+      onclick="return hs.expand(this, config_pinnacles2)">
+      <img class="lazy galleries/pinnacles2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/95.jpg" alt="95.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/pinnacles2/95.jpg" alt="95.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/pinnacles2/99.jpg"
+      title=""
+      onclick="return hs.expand(this, config_pinnacles2)">
+      <img class="lazy galleries/pinnacles2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles2/99.jpg" alt="99.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/pinnacles2/99.jpg" alt="99.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="Yosemite"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -394,122 +479,6 @@
       <img class="lazy galleries/machete" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/machete/IMG_0178.jpg" alt="IMG_0178.jpg" />
       <noscript>
         <img width="160" height="120" src="thumbs/machete/IMG_0178.jpg" alt="IMG_0178.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-
-<a id="QuatreTetes"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Quatre T&ecirc;tes</h3>
-  </li>
-  <li class="date">
-    January 2013
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/quatre_tetes/1.jpg"
-      title=""
-      onclick="return hs.expand(this, config_quatre_tetes)">
-      <img class="lazy galleries/quatre_tetes" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/1.jpg" alt="1.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/quatre_tetes/1.jpg" alt="1.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/quatre_tetes/2.jpg"
-      title=""
-      onclick="return hs.expand(this, config_quatre_tetes)">
-      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/2.jpg" alt="2.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/quatre_tetes/2.jpg" alt="2.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/quatre_tetes/3.jpg"
-      title=""
-      onclick="return hs.expand(this, config_quatre_tetes)">
-      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/3.jpg" alt="3.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/quatre_tetes/3.jpg" alt="3.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/quatre_tetes/4.jpg"
-      title=""
-      onclick="return hs.expand(this, config_quatre_tetes)">
-      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/4.jpg" alt="4.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/quatre_tetes/4.jpg" alt="4.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/quatre_tetes/IMG_0063.jpg"
-      title=""
-      onclick="return hs.expand(this, config_quatre_tetes)">
-      <img class="lazy galleries/quatre_tetes" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/IMG_0063.jpg" alt="IMG_0063.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/quatre_tetes/IMG_0063.jpg" alt="IMG_0063.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/quatre_tetes/IMG_0066.jpg"
-      title=""
-      onclick="return hs.expand(this, config_quatre_tetes)">
-      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/IMG_0066.jpg" alt="IMG_0066.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/quatre_tetes/IMG_0066.jpg" alt="IMG_0066.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/quatre_tetes/IMG_0068.jpg"
-      title=""
-      onclick="return hs.expand(this, config_quatre_tetes)">
-      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/IMG_0068.jpg" alt="IMG_0068.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/quatre_tetes/IMG_0068.jpg" alt="IMG_0068.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/quatre_tetes/IMG_0078.jpg"
-      title=""
-      onclick="return hs.expand(this, config_quatre_tetes)">
-      <img class="lazy galleries/quatre_tetes" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/IMG_0078.jpg" alt="IMG_0078.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/quatre_tetes/IMG_0078.jpg" alt="IMG_0078.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/quatre_tetes/IMG_0082.jpg"
-      title=""
-      onclick="return hs.expand(this, config_quatre_tetes)">
-      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/IMG_0082.jpg" alt="IMG_0082.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/quatre_tetes/IMG_0082.jpg" alt="IMG_0082.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/quatre_tetes/IMG_0088.jpg"
-      title=""
-      onclick="return hs.expand(this, config_quatre_tetes)">
-      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/IMG_0088.jpg" alt="IMG_0088.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/quatre_tetes/IMG_0088.jpg" alt="IMG_0088.jpg" />
       </noscript>
     </a>
   </div>
