--- a/content5.html
+++ b/content5.html
@@ -1,3 +1,119 @@
+<a id="QuatreTetes"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Quatre T&ecirc;tes</h3>
+  </li>
+  <li class="date">
+    January 2013
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/quatre_tetes/1.jpg"
+      title=""
+      onclick="return hs.expand(this, config_quatre_tetes)">
+      <img class="lazy galleries/quatre_tetes" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/1.jpg" alt="1.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/quatre_tetes/1.jpg" alt="1.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/quatre_tetes/2.jpg"
+      title=""
+      onclick="return hs.expand(this, config_quatre_tetes)">
+      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/2.jpg" alt="2.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/quatre_tetes/2.jpg" alt="2.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/quatre_tetes/3.jpg"
+      title=""
+      onclick="return hs.expand(this, config_quatre_tetes)">
+      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/3.jpg" alt="3.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/quatre_tetes/3.jpg" alt="3.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/quatre_tetes/4.jpg"
+      title=""
+      onclick="return hs.expand(this, config_quatre_tetes)">
+      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/4.jpg" alt="4.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/quatre_tetes/4.jpg" alt="4.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/quatre_tetes/IMG_0063.jpg"
+      title=""
+      onclick="return hs.expand(this, config_quatre_tetes)">
+      <img class="lazy galleries/quatre_tetes" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/IMG_0063.jpg" alt="IMG_0063.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/quatre_tetes/IMG_0063.jpg" alt="IMG_0063.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/quatre_tetes/IMG_0066.jpg"
+      title=""
+      onclick="return hs.expand(this, config_quatre_tetes)">
+      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/IMG_0066.jpg" alt="IMG_0066.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/quatre_tetes/IMG_0066.jpg" alt="IMG_0066.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/quatre_tetes/IMG_0068.jpg"
+      title=""
+      onclick="return hs.expand(this, config_quatre_tetes)">
+      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/IMG_0068.jpg" alt="IMG_0068.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/quatre_tetes/IMG_0068.jpg" alt="IMG_0068.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/quatre_tetes/IMG_0078.jpg"
+      title=""
+      onclick="return hs.expand(this, config_quatre_tetes)">
+      <img class="lazy galleries/quatre_tetes" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/IMG_0078.jpg" alt="IMG_0078.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/quatre_tetes/IMG_0078.jpg" alt="IMG_0078.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/quatre_tetes/IMG_0082.jpg"
+      title=""
+      onclick="return hs.expand(this, config_quatre_tetes)">
+      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/IMG_0082.jpg" alt="IMG_0082.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/quatre_tetes/IMG_0082.jpg" alt="IMG_0082.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/quatre_tetes/IMG_0088.jpg"
+      title=""
+      onclick="return hs.expand(this, config_quatre_tetes)">
+      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/IMG_0088.jpg" alt="IMG_0088.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/quatre_tetes/IMG_0088.jpg" alt="IMG_0088.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
+
 <a id="Pinnacles"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -473,171 +589,6 @@
       <img class="lazy galleries/tallac" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tallac/5.jpg" alt="5.jpg" />
       <noscript>
         <img width="160" height="120" src="thumbs/tallac/5.jpg" alt="5.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="Tuolumne"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Tuolumne</h3>
-  </li>
-  <li class="date">
-    June 2012
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/tuolumne/01.jpg"
-      title="Tuolumne with its meadows and granite domes."
-      onclick="return hs.expand(this, config_tuolumne)">
-      <img class="lazy galleries/tuolumne" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tuolumne/01.jpg" alt="01.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tuolumne/01.jpg" alt="01.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/tuolumne/02.jpg"
-      title="On top of East Cottage dome. The morning was chilly and windy."
-      onclick="return hs.expand(this, config_tuolumne)">
-      <img class="lazy galleries/tuolumne" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tuolumne/02.jpg" alt="02.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tuolumne/02.jpg" alt="02.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/tuolumne/05.jpg"
-      title="Sport climbing in Tuolumne is mostly on unprotectable vertical faces sprinkled with tiny knobs."
-      onclick="return hs.expand(this, config_tuolumne)">
-      <img class="lazy galleries/tuolumne" width="80" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tuolumne/05.jpg" alt="05.jpg" />
-      <noscript>
-        <img width="80" height="120" src="thumbs/tuolumne/05.jpg" alt="05.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/tuolumne/08.jpg"
-      title="Benji is leading the way on a long 5.11a on the West face of East Cottage."
-      onclick="return hs.expand(this, config_tuolumne)">
-      <img class="lazy galleries/tuolumne" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tuolumne/08.jpg" alt="08.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/tuolumne/08.jpg" alt="08.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/tuolumne/12.jpg"
-      title="Pondering the crux section... Standing on micro knobs take a little bit of time to get used to."
-      onclick="return hs.expand(this, config_tuolumne)">
-      <img class="lazy galleries/tuolumne" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tuolumne/12.jpg" alt="12.jpg" />
-      <noscript>
-        <img width="180" height="120" src="thumbs/tuolumne/12.jpg" alt="12.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/tuolumne/15.jpg"
-      title="Knob dancing... Yeah!"
-      onclick="return hs.expand(this, config_tuolumne)">
-      <img class="lazy galleries/tuolumne" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tuolumne/15.jpg" alt="15.jpg" />
-      <noscript>
-        <img width="180" height="120" src="thumbs/tuolumne/15.jpg" alt="15.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/tuolumne/17.jpg"
-      title="Hanson busting out really creative moves to get out of a tricky situation."
-      onclick="return hs.expand(this, config_tuolumne)">
-      <img class="lazy galleries/tuolumne" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tuolumne/17.jpg" alt="17.jpg" />
-      <noscript>
-        <img width="180" height="120" src="thumbs/tuolumne/17.jpg" alt="17.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/tuolumne/19.jpg"
-      title="A forest of domes."
-      onclick="return hs.expand(this, config_tuolumne)">
-      <img class="lazy galleries/tuolumne" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tuolumne/19.jpg" alt="19.jpg" />
-      <noscript>
-        <img width="180" height="120" src="thumbs/tuolumne/19.jpg" alt="19.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/tuolumne/20.jpg"
-      title="Hanson setting up a top-rope on his 5.11c crack project. An incredible line."
-      onclick="return hs.expand(this, config_tuolumne)">
-      <img class="lazy galleries/tuolumne" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tuolumne/20.jpg" alt="20.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/tuolumne/20.jpg" alt="20.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/tuolumne/22.jpg"
-      title="Falling off the crux boulder problem. The jams are just too wide for me."
-      onclick="return hs.expand(this, config_tuolumne)">
-      <img class="lazy galleries/tuolumne" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tuolumne/22.jpg" alt="22.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tuolumne/22.jpg" alt="22.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/tuolumne/24.jpg"
-      title="Hanson smoothly sails through the overhanding crack."
-      onclick="return hs.expand(this, config_tuolumne)">
-      <img class="lazy galleries/tuolumne" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tuolumne/24.jpg" alt="24.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tuolumne/24.jpg" alt="24.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/tuolumne/26.jpg"
-      title="The final roof is juggy but quite dynamic."
-      onclick="return hs.expand(this, config_tuolumne)">
-      <img class="lazy galleries/tuolumne" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tuolumne/26.jpg" alt="26.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tuolumne/26.jpg" alt="26.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/tuolumne/32.jpg"
-      title="A very thin 5.11a next to the mythical Bachar-Yerian on Medlicott dome."
-      onclick="return hs.expand(this, config_tuolumne)">
-      <img class="lazy galleries/tuolumne" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tuolumne/32.jpg" alt="32.jpg" />
-      <noscript>
-        <img width="180" height="120" src="thumbs/tuolumne/32.jpg" alt="32.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/tuolumne/34.jpg"
-      title="Even the well-protected routes have committing sections."
-      onclick="return hs.expand(this, config_tuolumne)">
-      <img class="lazy galleries/tuolumne" width="80" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tuolumne/34.jpg" alt="34.jpg" />
-      <noscript>
-        <img width="80" height="120" src="thumbs/tuolumne/34.jpg" alt="34.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/tuolumne/36.jpg"
-      title="Felling so free while gliding through a sea of granite."
-      onclick="return hs.expand(this, config_tuolumne)">
-      <img class="lazy galleries/tuolumne" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tuolumne/36.jpg" alt="36.jpg" />
-      <noscript>
-        <img width="180" height="120" src="thumbs/tuolumne/36.jpg" alt="36.jpg" />
       </noscript>
     </a>
   </div>
